--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "packages/*"
   ],
   "scripts": {
+    "db:start": "docker start clusters-db 2>/dev/null || docker compose -f docker/docker-compose.yml up -d postgres",
+    "db:stop": "docker stop clusters-db",
+    "predev": "npm run db:start",
     "dev": "concurrently \"npm run dev -w apps/api\" \"npm run dev -w apps/web\"",
     "build": "npm run build --workspaces"
   },
