--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,8 +23,10 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "google-auth-library": "^10.5.0",
     "helmet": "^7.1.0",
     "morgan": "^1.10.1",
+    "node-ssh": "^13.2.1",
     "pg": "^8.11.3",
     "winston": "^3.19.0",
     "zod": "^4.3.6"
