--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   postgres:
     image: postgres:15-alpine
     container_name: clusters-db
+    restart: always
     environment:
       POSTGRES_USER: clusters
       POSTGRES_PASSWORD: securepassword
@@ -14,6 +15,7 @@ services:
   redis:
     image: redis:alpine
     container_name: clusters-queue
+    restart: always
     ports:
       - "6385:6379"
 
