--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.0"
+  },
+  "dependencies": {
+    "@aws-sdk/client-iam": "^3.980.0",
+    "@aws-sdk/client-sts": "^3.980.0",
+    "@azure/arm-resources": "^7.0.0",
+    "@azure/identity": "^4.13.0",
+    "crypto": "^1.0.1",
+    "google-auth-library": "^10.5.0"
   }
 }
