--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@aws-sdk/client-iam": "^3.980.0",
     "@aws-sdk/client-sts": "^3.980.0",
+    "@azure/arm-authorization": "^9.0.0",
     "@azure/arm-resources": "^7.0.0",
     "@azure/identity": "^4.13.0",
     "crypto": "^1.0.1",
